fix: footer gap

--- a/online-zoo/pages/donate/style.css
+++ b/online-zoo/pages/donate/style.css
@@ -167,6 +167,7 @@ html {
 .footer-grid-wrap {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
 }
 
 .footer-left-flex {
