--- a/online-zoo/pages/main/style.css
+++ b/online-zoo/pages/main/style.css
@@ -179,6 +179,7 @@ html {
 .footer-grid-wrap {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
 }
 
 .footer-left-flex {
